Refactor FetchAndMergeEntry class for improved functionality and readability
- Rename SUPPORTED_FIELDS to SUPPORTED_IDENTIFIER_FIELDS for clarity
- Remove unnecessary hasAnySupportedField method and associated checks
- Refactor duplicate code into utility methods (getFields, getJointFields)
- Improve error handling with more specific exception messages
- Remove edited boolean flag in favor of NamedCompound#hasEdits()
- Enhance use of Optional, Stream, and method references
- Reduce method parameters for better maintainability
- Improve user notifications with entry citation keys
- Restructure methods to separate concerns more effectively

Minor modifications to MergeWithFetchedEntryAction.java to align with
the new version of FetchAndMergeEntry.java